themes/a11y-base.css
* {
    -GtkRange-stepper-size: 2;
    -GtkScale-slider-length: 18;
    -GtkRange-slider-width: 18;

    -GtkTreeView-expander-size: 16;

    -GtkWidget-cursor-color: @theme_highlight_color;
    -GtkWidget-cursor-aspect-ratio: 0.10;

    -GtkWidget-focus-padding: 1;
    -GtkWidget-focus-line-width: 2;
    -GtkWidget-focus-line-pattern: "\002\002";

    -GtkMenu-horizontal-padding: 0;
    -GtkMenu-vertical-padding: 0;

    -GtkScrolledWindow-scrollbar-spacing: 0;
    -GtkScrolledWindow-scrollbars-within-bevel: 1;

    -GtkComboBox-arrow-scaling: 0.9;
    -GtkButton-default-border: 0;

    background-clip: padding-box;
}

GtkWindow {
    background-color: @theme_base_color;
    color: @theme_fg_color;
}

*:insensitive {
    color: @theme_insensitive_color;
    background-color: @theme_insensitive_bg;
    border-color: @theme_insensitive_color;
}

GtkCheckButton:selected,
GtkCheckButton:selected:focus {
    background-color: @theme_internal_bg;
    color: @theme_fg_color;
}

.image {
    color: @theme_selected_bg_color;
}

.image:hover {
    color: @theme_fg_color;
}

GtkImage:insensitive {
    background-color: transparent;
}

.tooltip {
    background-color: @theme_fg_color;
    color: @theme_insensitive_bg;
}

.grip {
    background-color: @theme_insensitive_color;
}

.button,
.entry {
    border-width: 1px;
    border-style: solid;
    border-color: @theme_fg_color;
}

.button {
    background-color: @theme_button_bg;
}

.button:insensitive {
    background-color: @theme_insensitive_bg;
}

.button:hover {
    background-color: @theme_fg_color;
    color: @theme_insensitive_bg;
}

.button:active {
    background-color: @theme_slider_bg;
    color: @theme_base_color;
}

GtkComboBox *:hover {
    color: @theme_insensitive_bg;
}

GtkComboBox .separator {
    color: transparent;
}

.button:insensitive,
.trough:insensitive,
.entry:insensitive {
    border-color: @theme_insensitive_color;
}

.trough {
    background-color: @theme_internal_bg;
    color: @theme_fg_color;

    border-width: 1px;
    border-style: solid;
    border-color: @theme_internal_border;
}

.entry:insensitive,
.trough:insensitive {
    background-color: @theme_insensitive_bg;
    color: @theme_insensitive_color;
}

.button:hover:active {
    background-color: @theme_fg_color;
}

.button:insensitive:active,
.trough:insensitive:active {
    background-color: @theme_insensitive_bg;
}

.entry {
    background-color: @theme_base_color;
}

.entry:selected {
    background-color: @theme_selected_bg_color;
    color: @theme_base_color;
}

.entry:focus {
    border-width: 2px;
    border-color: @theme_highlight_color;
}

.progressbar {
    background-color: @theme_highlight_color;
    border-style: none;
}

.entry {
    padding: 4px;
}

.button {
    padding: 1px 4px;
}

GtkComboBox .button {
    padding: 0 4px;
}

.combobox-entry .entry:first-child {
    border-right-width: 0px;
}

.combobox-entry .entry:last-child {
    border-left-width: 0px;
}

.spinbutton .button {
    padding: 2px 6px;
    border-width: 0px 1px;
    color: @theme_fg_color;
}

.spinbutton .button:hover {
    color: @theme_insensitive_bg;
    border-color: @theme_fg_color;
}

.spinbutton .button:insensitive {
    color: @theme_insensitive_color;
}

.spinbutton .button:first-child,
.spinbutton .button:last-child {
    border-width: 0px;
}

.menubar .menuitem {
    padding: 3px 5px;
}

.menubar .menuitem:hover {
    background-color: @theme_selected_bg_color;
    color: @theme_base_color;
}

.menu .menuitem {
    padding: 4px;
}

.menu .menuitem:hover {
    background-color: @theme_selected_bg_color;
    color: @theme_base_color;
}

.menu {
    border-style: solid;
    border-color: @theme_fg_color;
    border-width: 2px;
}

.menuitem.separator {
    -GtkMenuItem-horizontal-padding: 0;
}

.toolbar {
    padding: 4px;
    border-width: 1px 0;
    border-style: solid;
}

.toolbar .button {
    background-color: transparent;
}

.toolbar .button:active {
    background-color: @theme_slider_bg;
}

.toolbar .button:hover {
    background-color: @theme_fg_color;
}

.toolbar .button *:insensitive,
.toolbar .button:insensitive {
    background-color: @theme_base_color;
}

.toolbar .button *:insensitive:active,
.toolbar .button:insensitive:active {
    background-color: @theme_insensitive_bg;
}

.inline-toolbar {
    border-width: 0 1px 1px;
}

.primary-toolbar.toolbar,
.primary-toolbar .toolbar,
.menubar.toolbar,
.inline-toolbar {
    -GtkToolbar-button-relief: normal;
}

.primary-toolbar .button {
    border-color: transparent;
}

.primary-toolbar .button:hover,
.primary-toolbar .button:active {
    border-color: @theme_fg_color;
}

.primary-toolbar .button:active:insensitive {
    border-color: @theme_insensitive_color;
}

.primary-toolbar .button.raised,
.primary-toolbar .raised .button {
    border-color: @theme_fg_color;
}

.primary-toolbar .raised .button:insensitive,
.primary-toolbar .raised.button:insensitive {
    border-color: transparent;
}

.primary-toolbar .raised .button:active:insensitive,
.primary-toolbar .raised.button:active:insensitive {
    border-color: @theme_insensitive_color;
}

.linked .button,
.inline-toolbar .button {
    border-right-width: 0;
}

.linked .button:hover,
.inline-toolbar .button:hover {
    border-color: @theme_fg_color;
}

.linked .button:insensitive,
.inline-toolbar .button:insensitive {
    border-top-color: @theme_fg_color;
    border-bottom-color: @theme_fg_color;
}

.linked .button:first-child,
.inline-toolbar GtkToolButton:first-child .button {
    border-left-color: @theme_fg_color;
}

.linked .button:last-child,
.inline-toolbar GtkToolButton:last-child .button {
    border-width: 1px;
    border-right-color: @theme_fg_color;
}

.inline-toolbar .button *:insensitive,
.inline-toolbar .button:insensitive {
    background-color: @theme_insensitive_bg;
}

GtkScale.trough {
    border-image: linear-gradient(to bottom,
                                  transparent,
                                  transparent 5px,
                                  @theme_internal_border 5px,
                                  @theme_internal_border 15px,
                                  transparent 15px,
                                  transparent) 6 1 6 1 / 6px 1px 6px 1px;
    border-style: solid;
    border-width: 6px 1px;
    border-radius: 0;
}

GtkScale.trough.vertical {
    border-image: linear-gradient(to left,
                                  transparent,
                                  transparent 5px,
                                  @theme_internal_border 5px,
                                  @theme_internal_border 15px,
                                  transparent 15px,
                                  transparent) 1 6 1 6 / 1px 6px 1px 6px;
    border-style: solid;
    border-width: 1px 6px;
    border-radius: 0;
}

GtkScale.slider {
    background-clip: border-box;
    background-color: @theme_slider_bg;
    color: transparent;

    border-radius: 20px;
    border-color: @theme_slider_border;
    border-style: solid;
    border-width: 1px;
}

GtkScale.slider:hover {
    background-color: @theme_fg_color;
    border-color: @theme_fg_color;
}

GtkScale.slider:insensitive {
    background-color: @theme_insensitive_bg;
    border-color: @theme_insensitive_color;
}

GtkSwitch {
    font: bold;
}

GtkSwitch.slider {
    padding: 2px;

    border-width: 1px;
    border-color: @theme_slider_border;
    border-style: solid;
    border-radius: 3px;

    background-color: @theme_slider_bg;
    background-clip: border-box;
}

GtkSwitch.slider:insensitive {
    background-color: @theme_insensitive_bg;
    border-color: @theme_insensitive_color;
}

GtkSwitch.trough {
    border-color: @theme_fg_color;
    background-color: @theme_button_bg;
}

GtkSwitch.trough:active {
    color: @theme_highlight_color;
    background-color: @theme_button_bg;
}

.notebook {
    border-width: 1px;
    border-color: @theme_fg_color;
    border-style: solid;
}

.notebook tab {
    background-color: @theme_internal_bg;
    padding: 3px;
}

.notebook tab.top {
    border-image: linear-gradient(to bottom,
                                  transparent,
                                  transparent 2px,
                                  @theme_fg_color 2px,
                                  @theme_fg_color);
    border-image-slice: 3 1 1 1;
    border-image-width: 1;
    border-width: 3px 1px 0 1px;

    border-color: transparent;
}

.notebook tab:active {
    background-color: @theme_base_color;
    color: @theme_fg_color;
}

GtkScrolledWindow.frame {
    border-width: 1px;
    border-style: solid;
}

column-header .button {
    font: bold;

    border-top-width: 0;
    border-right-width: 0;
}

column-header .button:hover {
    background-color: @theme_fg_color;
    color: @theme_base_color;
    border-color: @theme_fg_color;
}

column-header:first-child .button {
    border-left-width: 0;
}

.check,
.radio {
    border-width: 1px;
    border-style: solid;
}

.expander row:selected:focus {
    color: @theme_base_color;
}

.floating-bar {
    background-color: @theme_insensitive_bg;
}

.info {
    background-color: @theme_active_color;
}

.scrollbar {
    -GtkRange-slider-width: 20;
    -GtkRange-stepper-size: 20;
    -GtkRange-trough-border: 0;
    -GtkScrollbar-has-backward-stepper: false;
    -GtkScrollbar-has-forward-stepper: false;
    -GtkScrollbar-min-slider-length: 64;
}

.scrollbar.trough {
    background-color: @theme_internal_bg;

    border-width: 0;
    border-color: transparent;
}

.scrollbars-junction {
    background-color: @theme_internal_bg;
}

.scrollbar.trough.vertical {
    box-shadow: inset 1px 0 @theme_internal_border;
}

.scrollbar.trough.horizontal {
    box-shadow: inset 0 1px @theme_internal_border;
}

.scrollbar.slider {
    background-color: @theme_slider_bg;

    border-style: solid;
    border-radius: 12px;
    border-width: 4px;
    border-color: transparent;
}

.scrollbar.slider:hover,
.scrollbar.slider:active:hover {
    background-color: @theme_fg_color;
    border-width: 4px;
    border-color: transparent;
}

.view {
    background-color: @theme_base_color;
}

.view:selected {
    background-color: @theme_selected_bg_color;
    color: @theme_base_color;
}

.view:selected:focus {
    background-color: @theme_fg_color;
    color: @theme_base_color;
}

GtkIconView.view.cell {
    border-radius: 4px;
}

GtkColorSwatch {
    border-width: 1px;
    border-style: solid;
    border-color: @theme_fg_color;
}

TerminalScreen {
    background-color: @theme_base_color;
    color: @theme_fg_color;
}

